--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,17 @@
 h1{
     color: lightcoral;
 }
+
+
+.yellow-bg{
+    background-color: yellowgreen;  /*!important*/
+}
+
+.text-center{
+    text-align: center;
+}
+
+.large-text{
+    font-size: 1.5em;
+
+}
